# appkit

./: CLAUDE.md  Cargo.build-spec.json  Cargo.toml  README.md
docs/: migration-guide.md
src/: app.rs  config.rs  error.rs  lib.rs  mcp.rs
