[package]
name = "appkit"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Appkit — shared GPU app bootstrap for pleme-io: AppState trait, config loader, event-loop wiring over madori"
homepage = "https://github.com/pleme-io/appkit"
repository = "https://github.com/pleme-io/appkit"
documentation = "https://docs.rs/appkit"
readme = "README.md"
license = "MIT"
categories = ["gui"]
keywords = ["gpu", "application", "framework", "madori", "shikumi"]

[features]
default = []
# Enable the `mcp::run_subcommand` helper for MCP-server subcommands.
# Delegates to shidou's current-thread runtime helper — no tokio feature
# flip needed on appkit itself.
mcp = []

[dependencies]
madori = { git = "https://github.com/pleme-io/madori" }
# shidou owns the shared app-bootstrap primitives (tracing init, config
# loading via shikumi, tokio runtime helpers). appkit builds on top with
# madori-specific event-loop wiring — no point duplicating the basics.
shidou = { git = "https://github.com/pleme-io/shidou" }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
